2022-10-21 flask bootstrap 기본페이지 생성

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -43,6 +43,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/fileupload">파일업로드</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/bloglist">블로그 목록</a>
+          </li>
           <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
